src/test/deca/syntax/invalid/braces_pars_01.deca
// Description:
//    Programme minimaliste qui teste la détection des accolades fermantes.
//
// Resultats:
//      Erreur ligne 11: "}" missing
//
// Historique:
//    cree le 01/01/2023

{